<resources>
    <string name="app_name">ChicCart</string>
    <string name="product_description">Product Description</string>
    <string name="place_order">Place Order</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="we_have_sent_otp_to_entered_number_please_check">We have sent OTP to the entered number Please check,.</string>
    <string name="my_profile">My Profile</string>
    <string name="terms_u0026_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_addresses">View Addresses</string>
    <string name="logout">Logout</string>
    <string name="PRIVACY">https://www.termsfeed.com/live/c3a16c43-1c65-47af-8b2b-ef8c22fb9abb</string>
    <string name="TERMS">https://www.termsfeed.com/live/d6b147e4-95e4-4984-997f-864ec1cf7939</string>
    <string name="address">Address</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="my_cart">My Cart</string>
</resources>